Bug 252784 - Fix inefficient uses of Vector::fill()
Summary: Fix inefficient uses of Vector::fill()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-22 16:47 PST by Chris Dumez
Modified: 2023-02-23 09:08 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-02-22 16:47:10 PST
Fix inefficient uses of Vector::fill().
Comment 1 Chris Dumez 2023-02-22 16:49:42 PST
Pull request: https://github.com/WebKit/WebKit/pull/10551
Comment 2 EWS 2023-02-23 09:07:33 PST
Committed 260748@main (01b10b7f0e65): <https://commits.webkit.org/260748@main>

Reviewed commits have been landed. Closing PR #10551 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-02-23 09:08:20 PST
<rdar://problem/105836582>