Fix inefficient uses of Vector::fill() https://bugs.webkit.org/show_bug.cgi?id=252784

Reviewed by Darin Adler.

Fix inefficient uses of Vector::fill(). Vector::fill() does a few things that
are unnecessary for a newly created Vector. It is more efficient to call the
`Vector(size, initialValue)` constructor.

* Source/JavaScriptCore/b3/air/AirAllocateRegistersByGraphColoring.cpp:
* Source/JavaScriptCore/b3/air/AirUseCounts.h:
(JSC::B3::Air::UseCounts::UseCounts):
* Source/JavaScriptCore/bytecode/Operands.h:
(JSC::Operands::Operands):
* Source/JavaScriptCore/dfg/DFGScoreBoard.h:
(JSC::DFG::ScoreBoard::ScoreBoard):
* Source/JavaScriptCore/wasm/js/JSWebAssemblyStruct.cpp:
(JSC::JSWebAssemblyStruct::JSWebAssemblyStruct):
* Source/WTF/wtf/FastBitVector.h:
(WTF::FastBitVector::FastBitVector):
* Source/WTF/wtf/FixedVector.h:
(WTF::FixedVector::FixedVector):
* Source/WTF/wtf/IndexMap.h:
(WTF::IndexMap::IndexMap):
* Source/WebCore/platform/audio/IIRFilter.cpp:
(WebCore::IIRFilter::IIRFilter):
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::ReplicaState::cloneID const):
* Source/WebCore/platform/graphics/coretext/FontCoreText.cpp:
(WebCore::hasGlyphsForCharacterRange):
* Source/WebCore/rendering/RenderFrameSet.h:
(WebCore::FrameEdgeInfo::FrameEdgeInfo):
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::RenderTable):

Canonical link: https://commits.webkit.org/260748@main